--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>S1 -Excercise_02</title>
+		<title>exercise2</title>
 		<style>
 			body { margin: 0; }
 
