--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -5,7 +5,7 @@
 		<title>exercise2</title>
 		<style>
 			body { margin: 0; }
-/*sa
+/*sas
 			/* CSS for a spinning animation */ 
 			#loader {
                 border: 5px solid #ffffff; /* Light grey */
