--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>S1 - Lecture 2</title>
     </head>
     <body>
-        <h1>S1 - Lecture 2</h1>
+        <h1>LUNAR_GROUP5</h1>
         <ul>
             <li><a href="./model/">LUNAR RESIDENCE</a> </li>
         </ul>
