--- a/model/index.html
+++ b/model/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>S1 - Lecture 2 - Example 2</title>
+		<title>LUNAR_G5</title>
 		<style>
 			body { margin: 0; }
 
